apps/vm/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: jellyfin
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - backend:
          service:
            name: jellyfin-nas
            port:
              number: 8096
        path: /
        pathType: Prefix
  - host: jellyfin.${domain_absolutist_it:=absolutist.it}
    http:
      paths:
      - backend:
          service:
            name: jellyfin-nas
            port:
              number: 8096
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jellyfin.${domain_wahoo_li:=wahoo.li}
    - jellyfin.${domain_absolutist_it:=absolutist.it}
    secretName: tls-jellyfin-ingress
